# tsukimi

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.dev.yml
.zed/: tasks.json
sql/: init.sql
tsukimi-api/: Cargo.toml  Dockerfile  docker-compose.yml
tsukimi-api/src/: config.rs  main.rs
tsukimi-api/src/routes/: engine.rs  mod.rs  oauth.rs
tsukimi-api/src/services/: database.rs  mod.rs  oauth.rs
tsukimi-cdn/: Cargo.toml  Dockerfile
tsukimi-cdn/src/: main.rs
tsukimi-cli/: Cargo.toml  Dockerfile
tsukimi-cli/res/: oauth2_connected.html
tsukimi-cli/src/: api.rs  auth.rs  error.rs  main.rs  models.rs
tsukimi-cli/src/commands/: init.rs  install.rs  list.rs  login.rs  logout.rs  mod.rs  search.rs  whoami.rs
tsukimi-cli/src/services/: api.rs  credentials.rs  mod.rs  project_data.rs
tsukimi-core/: Cargo.toml
tsukimi-core/src/: auth.rs  models.rs
tsukimi-extension/: Cargo.toml
tsukimi-extension/src/: lib.rs
tsukimi-extension/wit/: extension.wit
tsukimi-web/: Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  style.css
tsukimi-web/src/: app.css  app.html  app.rs  main.rs
tsukimi-web/src/components/: engine.rs  mod.rs  utils.rs  visual_novel.rs
tsukimi-web/src/lib/components/layout/: Breadcrumb.svelte  Navbar.svelte
tsukimi-web/src/lib/components/ui/: Table.svelte
tsukimi-web/src/lib/types/: index.ts
tsukimi-web/src/routes/(connected)/: +layout.svelte  +page.svelte
tsukimi-web/src/routes/(connected)/engines/: +page.svelte
tsukimi-web/src/routes/(connected)/home/: +page.ts
tsukimi-web/src/routes/(connected)/visual-novels/: +page.svelte
tsukimi-web/static/font/: MingCute.css
